2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (offset_compare): When calculating A_END, subtract
	one from A[1].  When calculating B_END, subtract one from B[1].
	(mdestroy): Correctly calculate the bounds.  Detach the node from
	the tree.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_normal): If the fault is
	unhandled, print the register state.
	(exception_handler_activated): Likewise.
	* ia32-exception-entry.S (EF_STACK_START): Don't define.
	(EF_SAVED_EAX): Define with an absolute value.
	(EF_SAVED_ECX): Likewise.
	(EF_SAVED_EDX): Likewise.
	(EF_SAVED_FLAGS): Likewise.
	(EF_SAVED_IP): Likewise.
	(EF_NEXT): Likewise.
	(EF_SAVED_EBX): New define.
	(EF_SAVED_EDI): New define.
	(EF_SAVED_ESI): New define.
	(exception_frame_run): Address the saved register values relative
	to ESP.  Also save EBX, EDI and ESI.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* as.h (AS_CHECK_SHADOW): Don't fail if the kernel says the
	capability's type is void but everything else matches.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (mmap): If MAP_FIXED is specified, first unmap the
	region.
	(mmap): Don't panic if we fail to create a pager, just return
	MAP_FAILED.

	* map.h (map_destroy_t): New define.
	(struct map): Add field destroy.
	(map_create): Take additional argument destroy.
	* map.c (map_create): Take additional argument destroy.  Set
	MAP->DESTROY to it.
	(map_destroy): Call MAP->DESTROY.  If MAP->PAGER->NO_REFS is NULL,
	unlock MAP->PAGER->LOCK.
	* anonymous.c (offset_compare): Support comparing ranges.
	(mdestroy): New function.
	(destroy): Don't free ANON->MAP_AREA.
	(anonymous_pager_alloc): Pass mdestroy to map_create.
	* mprotect.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add mprotect.c.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_init): Clear PAGER->LOCK.

	(pager_deinit): Don't use a while loop but an infinite loop.

2008-06-17  Neal H. Walfield  <neal@gnu.org>
